--- a/client-side/pom.xml
+++ b/client-side/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>es.kf</groupId>
-    <artifactId>signServlet</artifactId>
+    <artifactId>client-side</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>signServlet</name>
+    <name>client-side</name>
     <packaging>war</packaging>
 
     <properties>
@@ -38,6 +38,11 @@
         <dependency>
             <groupId>org.glassfish.jersey.inject</groupId>
             <artifactId>jersey-cdi2-se</artifactId>
+            <version>3.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
             <version>3.0.4</version>
         </dependency>
         <dependency>
@@ -150,7 +155,6 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
-
     </dependencies>
 
     <build>
