--- a/front-pdjs/package.json
+++ b/front-pdjs/package.json
@@ -1,6 +1,7 @@
 {
   "name": "front-pdjs",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -29,6 +30,7 @@
     "@angular/cli": "~15.2.0",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.0.0",
+    "@types/pdfjs-dist": "^2.10.378",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
